<resources>
    <string name="app_name">ISBNガチャ</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="generate_one">1回</string>
    <string name="isbn_list_fragment_label">ISBNガチャ</string>
    <string name="book_detail_fragment_label">本の詳細</string>
    <string name="isbn_label_text">ISBN</string>
    <string name="title_label_text">タイトル</string>
    <string name="author_label_text">著者</string>
    <string name="publisher_label_text">出版社</string>
    <string name="pubdate_label_text">出版日</string>
    <string name="generate_ten">10回</string>
</resources>