<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="350dp"
        app:layout_constraintStart_toStartOf="@+id/titleLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleLabelTextView" />

    <TextView
        android:id="@+id/isbnLabelTextView"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:gravity="start"
        android:text="@string/isbn_label_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookImage" />

    <TextView
        android:id="@+id/pubdateLabelTextView"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:text="@string/pubdate_label_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/publisherTextView"
        app:layout_constraintTop_toBottomOf="@+id/publisherTextView" />

    <TextView
        android:id="@+id/authorLabelTextView"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:text="@string/author_label_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/titleTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <TextView
        android:id="@+id/titleLabelTextView"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:text="@string/title_label_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/isbnTextView"
        app:layout_constraintTop_toBottomOf="@+id/isbnTextView" />

    <TextView
        android:id="@+id/publisherLabelTextView"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:text="@string/publisher_label_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/authorTextView"
        app:layout_constraintTop_toBottomOf="@+id/authorTextView" />

    <TextView
        android:id="@+id/pubdateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/pubdateLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/pubdateLabelTextView" />

    <TextView
        android:id="@+id/publisherTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/publisherLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/publisherLabelTextView" />

    <TextView
        android:id="@+id/authorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="350dp"
        app:layout_constraintStart_toStartOf="@+id/authorLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/authorLabelTextView" />

    <ImageView
        android:id="@+id/bookImage"
        android:layout_width="150dp"
        android:layout_height="212dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/isbnTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/isbnLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/isbnLabelTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>